--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
 
         <header class="main-header">
-            <a href="./index.html"><h1 class="logo"><img src="./Assets/images/Pomotecnica.png" alt="pomotecnica-logo">Pomotectnica.io</h1></a>
+            <a href="./index.html"><h1 class="logo"><img src="./Assets/images/Pomotecnica.png" alt="pomotecnica-logo">Pomotecnica.io</h1></a>
             <div class="popup" onclick="togglePopup()">
                 <a href="#" class="nav-link active">About</a>
                 <div class="popuptext" id="popupContent">
